--- a/Trakops/index.html
+++ b/Trakops/index.html
@@ -35,7 +35,7 @@
                 <li><a href="#contact" class=" text-gray-700 hover:text-indigo-600 transition font-medium">Contact</a></li>
               </ul>
               <button class="cta-button bg-indigo-600 hover:bg-indigo-700 text-white px-5 py-2 rounded-lg transition-all duration-300 shadow-lg hover:shadow-xl cursor-pointer">
-                <a href="">Request Demo</a>
+                <a href="#contact">Request Demo</a>
               </button>
 
 
@@ -54,14 +54,14 @@
               <li><a href="#contact" class=" text-gray-700 hover:text-indigo-600 transition font-medium">Contact</a></li>
             </ul>
             <button class="cta-button mt-4 w-full bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-lg transition-all duration-300 shadow-lg hover:shadow-xl cursor-pointer">
-              <a href="">Request Demo</a>
+              <a href="#contact">Request Demo</a>
             </button>
           </div>
 
         </div>
-       </nav>
+      </nav>
 
-       <!-- hero section -->
+      <!-- hero section -->
         <div class=" bg-blue-50 md:p-10 py-5" id="home">
           <div class=" m-10 ">
             <div class="flex justify-center items-center  gap-5 flex-col lg:flex-row">
@@ -82,23 +82,24 @@
         </div>
 
 
-        <div class=" p-5 ">
-          <div class=" flex justify-center items-center m-5 flex-col" >
-            <div class=" flex flex-col justify-center items-center lg:flex-row gap-8">
+        <div class=" ">
+          <div class=" flex justify-center items-center  flex-col m-5 lg:m-10" >
+            <div class=" flex flex-col justify-center items-center lg:flex-row gap-8 md:p-10 lg:p-20">
               <div  class=" my-2 animate__animated animate__fadeInLeft animate__delay-3s" >
                 <h1 class=" text-4xl py-2 font-bold text-gray-800">Unify Your Operations with a Single SaaS Solution.</h1>
                 <p class=" text-xl space-y-1 text-gray-700">Welcome to TrakOps, your powerful Software-as-a-Service (SaaS) platform designed to streamline your operations, boost productivity, and drive your business forward. We're here to empower your growth.</p>
               </div>
 
-              <div class=" lg:h[500px] lg:w-6xl animate__fadeInRight animate__animated animate__delay-3s">
+              <div class=" lg:h-full lg:w-full animate__fadeInRight animate__animated animate__delay-3s">
                 <img src="images/hands.jpg" alt="Team collaborating on TrakOps" class=" rounded-2xl shadow-lg">
               </div>
             </div>
           </div>
-         </div>
+        </div>
 
 
-         <div class=" m-3 flex flex-col gap-5 md:flex-row">
+
+        <div class=" m-3 flex flex-col gap-5 md:flex-row">
             <div class=" rounded-3xl bg-indigo-700 ">
               <div class=" p-8 md:py-16">
                 <div class="text-5xl text-white cursor-pointer p-4">
@@ -501,7 +502,7 @@
         </div>
 
         <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-500 text-md">
-            <p>&copy; 2025 <span class=" text-indigo-600">TRAK</span><span class=" text-orange-300">OPS</span>. All rights reserved. Made with ❤️ in Cameroon.</p>
+            <p>&copy; 2025 <span class=" text-indigo-600">TRAK</span><span class=" text-orange-300">OPS</span>. All rights reserved.</p>
         </div>
     </div>
 </footer>
